Add cards for lecture 21

--- a/LinA2Cards.tex
+++ b/LinA2Cards.tex
@@ -3717,4 +3717,202 @@
         \cite{Satz 17.6 / Def. 17.7}
     \end{field}
 \end{note}
+
+%%%%%%%%% Vorlesung 21 %%%%%%%%%%%%
+
+\begin{note}
+    \tags{Def}
+    \xplain{aecec954-a8b3-4cf0-9088-efac1f16f0cf}
+
+    \xfield{
+        Die \textbf{reinen Tensoren} sind \dots
+    }
+    \begin{field}
+        Die \textbf{reinen Tensoren} sind die Vektoren im Bild von \emph{can}:
+        \[\vec{v}_1\otimes\dots\otimes\vec{v}_n := \text{can}(\vec{v}_1,\dots,\vec{v}_n)\]
+        \cite{Def. 17.8}
+    \end{field}
+\end{note}
+
+\begin{note}
+    \tags{Satz}
+    \xplain{56a72caf-26c5-4118-8a92-f2d9a49927ec}
+
+    \begin{field}
+        \textbf{Rechenregeln für (reine) Tensoren}
+        \begin{align*}
+            \phantom{(\vec{v}_1 + \vec{v}'_1) \otimes \vec{v}_2} &= \phantom{\vec{v}_1 \otimes \vec{v}_2 + \vec{v}'_1 \otimes \vec{v}_2}\\
+            \vec{v_1} \otimes (\vec{v}_2 + \vec{v}'_2) &= \vec{v}_1 \otimes \vec{v}_2 + \vec{v}_1 \otimes \vec{v}'_2\\
+            a\vec{v}_1 \otimes \vec{v}_2 &= a \cdot (\vec{v}_1\otimes \vec{v}_2) = \vec{v}_1 \otimes a\vec{v}_2\\
+            \forall \vec{v}_i\in V_i, a\in K
+        \end{align*}
+    \end{field}
+    \begin{field}
+        \textbf{Rechenregeln für (reine) Tensoren}
+        \begin{align*}
+            (\vec{v}_1 + \vec{v}'_1) \otimes \vec{v}_2 &= \vec{v}_1 \otimes \vec{v}_2 + \vec{v}'_1 \otimes \vec{v}_2\\
+            \vec{v_1} \otimes (\vec{v}_2 + \vec{v}'_2) &= \vec{v}_1 \otimes \vec{v}_2 + \vec{v}_1 \otimes \vec{v}'_2\\
+            a\vec{v}_1 \otimes \vec{v}_2 &= a \cdot (\vec{v}_1\otimes \vec{v}_2) = \vec{v}_1 \otimes a\vec{v}_2\\
+            \forall \vec{v}_i\in V_i, a\in K
+        \end{align*}
+        \cite{Notiz 17.11}
+    \end{field}
+
+    \begin{field}
+        \textbf{Rechenregeln für (reine) Tensoren}
+        \begin{align*}
+            (\vec{v}_1 + \vec{v}'_1) \otimes \vec{v}_2 &= \vec{v}_1 \otimes \vec{v}_2 + \vec{v}'_1 \otimes \vec{v}_2\\
+            \phantom{\vec{v_1} \otimes (\vec{v}_2 + \vec{v}'_2)} &= \phantom{\vec{v}_1 \otimes \vec{v}_2 + \vec{v}_1 \otimes \vec{v}'_2}\\
+            a\vec{v}_1 \otimes \vec{v}_2 &= a \cdot (\vec{v}_1\otimes \vec{v}_2) = \vec{v}_1 \otimes a\vec{v}_2\\
+            \forall \vec{v}_i\in V_i, a\in K
+        \end{align*}
+    \end{field}
+    \begin{field}
+        \textbf{Rechenregeln für (reine) Tensoren}
+        \begin{align*}
+            (\vec{v}_1 + \vec{v}'_1) \otimes \vec{v}_2 &= \vec{v}_1 \otimes \vec{v}_2 + \vec{v}'_1 \otimes \vec{v}_2\\
+            \vec{v_1} \otimes (\vec{v}_2 + \vec{v}'_2) &= \vec{v}_1 \otimes \vec{v}_2 + \vec{v}_1 \otimes \vec{v}'_2\\
+            a\vec{v}_1 \otimes \vec{v}_2 &= a \cdot (\vec{v}_1\otimes \vec{v}_2) = \vec{v}_1 \otimes a\vec{v}_2\\
+            \forall \vec{v}_i\in V_i, a\in K
+        \end{align*}
+        \cite{Notiz 17.11}
+    \end{field}
+
+    \begin{field}
+        \textbf{Rechenregeln für (reine) Tensoren}
+        \begin{align*}
+            (\vec{v}_1 + \vec{v}'_1) \otimes \vec{v}_2 &= \vec{v}_1 \otimes \vec{v}_2 + \vec{v}'_1 \otimes \vec{v}_2\\
+            \vec{v_1} \otimes (\vec{v}_2 + \vec{v}'_2) &= \vec{v}_1 \otimes \vec{v}_2 + \vec{v}_1 \otimes \vec{v}'_2\\
+            \phantom{a\vec{v}_1 \otimes \vec{v}_2} &= \phantom{a \cdot (\vec{v}_1\otimes \vec{v}_2) = \vec{v}_1 \otimes a\vec{v}_2}\\
+            \forall \vec{v}_i\in V_i, a\in K
+        \end{align*}
+    \end{field}
+    \begin{field}
+        \textbf{Rechenregeln für (reine) Tensoren}
+        \begin{align*}
+            (\vec{v}_1 + \vec{v}'_1) \otimes \vec{v}_2 &= \vec{v}_1 \otimes \vec{v}_2 + \vec{v}'_1 \otimes \vec{v}_2\\
+            \vec{v_1} \otimes (\vec{v}_2 + \vec{v}'_2) &= \vec{v}_1 \otimes \vec{v}_2 + \vec{v}_1 \otimes \vec{v}'_2\\
+            a\vec{v}_1 \otimes \vec{v}_2 &= a \cdot (\vec{v}_1\otimes \vec{v}_2) = \vec{v}_1 \otimes a\vec{v}_2\\
+            \forall \vec{v}_i\in V_i, a\in K
+        \end{align*}
+        \cite{Notiz 17.11}
+    \end{field}
+\end{note}
+
+\begin{note}
+    \tags{Satz}
+    \xplain{b8b5eb78-e49d-4b9c-b143-dc99228c4f66}
+
+    \begin{field}
+        \textbf{Eigenschaften des Tensorprodukts}\\
+        Für beliebige $K$-Vektorräume haben wir kanonische Isomorphismen:
+        \begin{itemize}
+            \item[N:] \hide{$K\otimes V \cong V$ mit $a\otimes \vec{v} \mapsto \vec{v}$}
+            \item[A:] $(V_1\otimes V_2)\otimes V_3 \cong V_1\otimes V_2 \otimes V_3 \cong V_1\otimes (V_2\otimes V_3)$\\
+            $(\vec{v}_1\otimes\vec{v}_2)\otimes\vec{v} \mapsto \vec{v}_1\otimes\vec{v}_2\otimes\vec{v}_3 \mapsfrom \vec{v}_1\otimes(\vec{v}_2\otimes\vec{v}_3$
+            \item[K:] $V_1\otimes V_2 \cong V_2\otimes V_1$ mit
+            $\vec{v}_1\otimes\vec{v}_2 \mapsto \vec{v}_2\otimes\vec{v}_1$
+            \item[D:] $(\oplus_{i\in I} V_i)\otimes W \cong \oplus_{i\in I}(V_i\otimes W)$ mit \\
+            $(\vec{v}_i)_{i\in I}\otimes \vec{w} \mapsto (\vec{v}_i\otimes \vec{w})_{i\in I}$
+        \end{itemize}
+    \end{field}
+    \begin{field}
+        \textbf{Eigenschaften des Tensorprodukts}\\
+        Für beliebige $K$-Vektorräume haben wir kanonische Isomorphismen:
+        \begin{itemize}
+            \item[N:] $K\otimes V \cong V$ mit $a\otimes \vec{v} \mapsto \vec{v}$
+            \item[A:] $(V_1\otimes V_2)\otimes V_3 \cong V_1\otimes V_2 \otimes V_3 \cong V_1\otimes (V_2\otimes V_3)$\\
+            $(\vec{v}_1\otimes\vec{v}_2)\otimes\vec{v} \mapsto \vec{v}_1\otimes\vec{v}_2\otimes\vec{v}_3 \mapsfrom \vec{v}_1\otimes(\vec{v}_2\otimes\vec{v}_3$
+            \item[K:] $V_1\otimes V_2 \cong V_2\otimes V_1$ mit
+            $\vec{v}_1\otimes\vec{v}_2 \mapsto \vec{v}_2\otimes\vec{v}_1$
+            \item[D:] $(\oplus_{i\in I} V_i)\otimes W \cong \oplus_{i\in I}(V_i\otimes W)$ mit \\
+            $(\vec{v}_i)_{i\in I}\otimes \vec{w} \mapsto (\vec{v}_i\otimes \vec{w})_{i\in I}$
+        \end{itemize}
+        \cite{Satz 17.12}
+    \end{field}
+
+    \begin{field}
+        \textbf{Eigenschaften des Tensorprodukts}\\
+        Für beliebige $K$-Vektorräume haben wir kanonische Isomorphismen:
+        \begin{itemize}
+            \item[N:] $K\otimes V \cong V$ mit $a\otimes \vec{v} \mapsto \vec{v}$
+            \item[A:] \hide{$(V_1\otimes V_2)\otimes V_3 \cong V_1\otimes V_2 \otimes V_3 \cong V_1\otimes (V_2\otimes V_3)$\\
+            $(\vec{v}_1\otimes\vec{v}_2)\otimes\vec{v} \mapsto \vec{v}_1\otimes\vec{v}_2\otimes\vec{v}_3 \mapsfrom \vec{v}_1\otimes(\vec{v}_2\otimes\vec{v}_3$}
+            \item[K:] $V_1\otimes V_2 \cong V_2\otimes V_1$ mit
+            $\vec{v}_1\otimes\vec{v}_2 \mapsto \vec{v}_2\otimes\vec{v}_1$
+            \item[D:] $(\oplus_{i\in I} V_i)\otimes W \cong \oplus_{i\in I}(V_i\otimes W)$ mit \\
+            $(\vec{v}_i)_{i\in I}\otimes \vec{w} \mapsto (\vec{v}_i\otimes \vec{w})_{i\in I}$
+        \end{itemize}
+    \end{field}
+    \begin{field}
+        \textbf{Eigenschaften des Tensorprodukts}\\
+        Für beliebige $K$-Vektorräume haben wir kanonische Isomorphismen:
+        \begin{itemize}
+            \item[N:] $K\otimes V \cong V$ mit $a\otimes \vec{v} \mapsto \vec{v}$
+            \item[A:] $(V_1\otimes V_2)\otimes V_3 \cong V_1\otimes V_2 \otimes V_3 \cong V_1\otimes (V_2\otimes V_3)$\\
+            $(\vec{v}_1\otimes\vec{v}_2)\otimes\vec{v} \mapsto \vec{v}_1\otimes\vec{v}_2\otimes\vec{v}_3 \mapsfrom \vec{v}_1\otimes(\vec{v}_2\otimes\vec{v}_3$
+            \item[K:] $V_1\otimes V_2 \cong V_2\otimes V_1$ mit
+            $\vec{v}_1\otimes\vec{v}_2 \mapsto \vec{v}_2\otimes\vec{v}_1$
+            \item[D:] $(\oplus_{i\in I} V_i)\otimes W \cong \oplus_{i\in I}(V_i\otimes W)$ mit \\
+            $(\vec{v}_i)_{i\in I}\otimes \vec{w} \mapsto (\vec{v}_i\otimes \vec{w})_{i\in I}$
+        \end{itemize}
+        \cite{Satz 17.12}
+    \end{field}
+
+    \begin{field}
+        \textbf{Eigenschaften des Tensorprodukts}\\
+        Für beliebige $K$-Vektorräume haben wir kanonische Isomorphismen:
+        \begin{itemize}
+            \item[N:] $K\otimes V \cong V$ mit $a\otimes \vec{v} \mapsto \vec{v}$
+            \item[A:] $(V_1\otimes V_2)\otimes V_3 \cong V_1\otimes V_2 \otimes V_3 \cong V_1\otimes (V_2\otimes V_3)$\\
+            $(\vec{v}_1\otimes\vec{v}_2)\otimes\vec{v} \mapsto \vec{v}_1\otimes\vec{v}_2\otimes\vec{v}_3 \mapsfrom \vec{v}_1\otimes(\vec{v}_2\otimes\vec{v}_3$
+            \item[K:] \hide{$V_1\otimes V_2 \cong V_2\otimes V_1$ mit
+            $\vec{v}_1\otimes\vec{v}_2 \mapsto \vec{v}_2\otimes\vec{v}_1$}
+            \item[D:] $(\oplus_{i\in I} V_i)\otimes W \cong \oplus_{i\in I}(V_i\otimes W)$ mit \\
+            $(\vec{v}_i)_{i\in I}\otimes \vec{w} \mapsto (\vec{v}_i\otimes \vec{w})_{i\in I}$
+        \end{itemize}
+    \end{field}
+    \begin{field}
+        \textbf{Eigenschaften des Tensorprodukts}\\
+        Für beliebige $K$-Vektorräume haben wir kanonische Isomorphismen:
+        \begin{itemize}
+            \item[N:] $K\otimes V \cong V$ mit $a\otimes \vec{v} \mapsto \vec{v}$
+            \item[A:] $(V_1\otimes V_2)\otimes V_3 \cong V_1\otimes V_2 \otimes V_3 \cong V_1\otimes (V_2\otimes V_3)$\\
+            $(\vec{v}_1\otimes\vec{v}_2)\otimes\vec{v} \mapsto \vec{v}_1\otimes\vec{v}_2\otimes\vec{v}_3 \mapsfrom \vec{v}_1\otimes(\vec{v}_2\otimes\vec{v}_3$
+            \item[K:] $V_1\otimes V_2 \cong V_2\otimes V_1$ mit
+            $\vec{v}_1\otimes\vec{v}_2 \mapsto \vec{v}_2\otimes\vec{v}_1$
+            \item[D:] $(\oplus_{i\in I} V_i)\otimes W \cong \oplus_{i\in I}(V_i\otimes W)$ mit \\
+            $(\vec{v}_i)_{i\in I}\otimes \vec{w} \mapsto (\vec{v}_i\otimes \vec{w})_{i\in I}$
+        \end{itemize}
+        \cite{Satz 17.12}
+    \end{field}
+
+    \begin{field}
+        \textbf{Eigenschaften des Tensorprodukts}\\
+        Für beliebige $K$-Vektorräume haben wir kanonische Isomorphismen:
+        \begin{itemize}
+            \item[N:] $K\otimes V \cong V$ mit $a\otimes \vec{v} \mapsto \vec{v}$
+            \item[A:] $(V_1\otimes V_2)\otimes V_3 \cong V_1\otimes V_2 \otimes V_3 \cong V_1\otimes (V_2\otimes V_3)$\\
+            $(\vec{v}_1\otimes\vec{v}_2)\otimes\vec{v} \mapsto \vec{v}_1\otimes\vec{v}_2\otimes\vec{v}_3 \mapsfrom \vec{v}_1\otimes(\vec{v}_2\otimes\vec{v}_3$
+            \item[K:] $V_1\otimes V_2 \cong V_2\otimes V_1$ mit
+            $\vec{v}_1\otimes\vec{v}_2 \mapsto \vec{v}_2\otimes\vec{v}_1$
+            \item[D:] \hide{$(\oplus_{i\in I} V_i)\otimes W \cong \oplus_{i\in I}(V_i\otimes W)$ mit \\
+            $(\vec{v}_i)_{i\in I}\otimes \vec{w} \mapsto (\vec{v}_i\otimes \vec{w})_{i\in I}$}
+        \end{itemize}
+    \end{field}
+    \begin{field}
+        \textbf{Eigenschaften des Tensorprodukts}\\
+        Für beliebige $K$-Vektorräume haben wir kanonische Isomorphismen:
+        \begin{itemize}
+            \item[N:] $K\otimes V \cong V$ mit $a\otimes \vec{v} \mapsto \vec{v}$
+            \item[A:] $(V_1\otimes V_2)\otimes V_3 \cong V_1\otimes V_2 \otimes V_3 \cong V_1\otimes (V_2\otimes V_3)$\\
+            $(\vec{v}_1\otimes\vec{v}_2)\otimes\vec{v} \mapsto \vec{v}_1\otimes\vec{v}_2\otimes\vec{v}_3 \mapsfrom \vec{v}_1\otimes(\vec{v}_2\otimes\vec{v}_3$
+            \item[K:] $V_1\otimes V_2 \cong V_2\otimes V_1$ mit
+            $\vec{v}_1\otimes\vec{v}_2 \mapsto \vec{v}_2\otimes\vec{v}_1$
+            \item[D:] $(\oplus_{i\in I} V_i)\otimes W \cong \oplus_{i\in I}(V_i\otimes W)$ mit \\
+            $(\vec{v}_i)_{i\in I}\otimes \vec{w} \mapsto (\vec{v}_i\otimes \vec{w})_{i\in I}$
+        \end{itemize}
+        \cite{Satz 17.12}
+    \end{field}
+\end{note}
 \end{document}
